// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "eve.test",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "did": "user(1)",
    "handle": "dan.test",
    "labels": Array [],
    "viewer": Object {
      "following": "record(0)",
    },
  },
  Object {
    "did": "user(2)",
    "handle": "carol.test",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(2)",
      "following": "record(1)",
    },
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
    "description": "hi im bob",
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "viewer": Object {
      "followedBy": "record(4)",
      "following": "record(3)",
    },
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "eve.test",
    "labels": Array [],
    "viewer": Object {},
  },
  Object {
    "did": "user(1)",
    "handle": "dan.test",
    "labels": Array [],
    "viewer": Object {
      "following": "record(0)",
    },
  },
]
`;
